# Project-New-Reign---Nemesis-Main

./: .gitignore  CMakeLists.txt  README.md  build.ps1  xmake.lua
.github/workflows/: build-test.yaml  build.yaml  release.yaml  xmake-build.yaml
CMake/: Boost.cmake  SrcGroup.cmake
include/: Global.h  LaunchPatcher.h  debugmsg.h  nemesisinfo.h  version.h
include/Parser/: ParsableObject.h  ScopeMachine.h
include/Parser/Interfaces/: ObjectParser.h
include/animdata/: AnimDataProjectListBuilder.h  AnimDataSingleFileBuilder.h  AnimationDataClipData.h  AnimationDataMotionData.h  AnimationDataProject.h  AnimationDataSingleFile.h  animdata-project.h
include/animdata/linked/: animdata-linkedproject.h
include/animsetdata/: AnimationSetDataProject.h  AnimationSetDataSingleFile.h  AnimationSetDataState.h
include/animsetdata/linked/: animsetdata-linkedproject.h  linkeddata.h  linkedstate.h
include/base/: exporter.h  file.h  importer.h  importerbase.h
include/core/: AnimationRequest.h  AnimationRequestCollection.h  AnimationRequestRepository.h  CollectionObject.h  CompilationManager.h  CompileState.h  CoreObject.h  ForEachObject.h  IfObject.h  LineStream.h  MasterRepository.h  ModClass.h  ModLine.h  ModObject.h  ModPatch.h  ModRepository.h  NLine.h  NObjectRepository.h  ParsingForEachScope.h  SemanticManager.h  SubTemplateObject.h  Template.h  animimport.h  animvalue.h  animvarptr.h  condition.h  linked.h  linkedcond.h  linkedpreprocessline.h  memoryfile.h  modinfo.h  modinfomanager.h  multichoice.h  preprocessline.h  querymanager.h
include/core/LineModifier/: AnimationEventModifier.h  AnimationFilePathModifier.h  AnimationOrderModifier.h  BaseIdModifier.h  Crc32Modifier.h  LengthModifier.h  LineModifierCollection.h  LineModifierFactory.h  MapModifier.h  MathModifier.h  MotionDataModifier.h  MultipleChoiceModifier.h  OptionVariableModifier.h  RequestIdModifier.h  RotationDataModifier.h  RunningNumberModifier.h  StandardLineModifier.h  SubstringModifier.h
include/core/Statements/: AnimationEventStatement.h  AnimationOrderStatement.h  CompositeStatement.h  ConditionalStatement.h  Crc32Statement.h  ElseIfStatement.h  ForEachStatement.h  IfStatement.h  LengthStatement.h  MapStatement.h  MathStatement.h  ModCodeStatement.h  MotionDataStatement.h  MultipleChoiceStatement.h  OptionStatement.h  RotationDataStatement.h  RunningNumberStatement.h  Statement.h  SubstringStatement.h
include/core/Template/: TemplateAnimDataClipData.h  TemplateAnimDataMotionData.h  TemplateClass.h  TemplateHkx.h  TemplateObject.h  TemplateOption.h  TemplateOptionModel.h  TemplateRepository.h
include/generate/: animationdata.h  animationdatatracker.h  animationsetdata.h  animationsetdatatype.h  animationutility.h  behaviorgenerator.h  behaviorprocess.h  behaviorprocess_utility.h  generator_utility.h
include/generate/animation/: animationinfo.h  animationthread.h  animthreadinfo.h  (+5 more)
include/hkx/: HkxBehaviorFile.h  HkxCharacter.h  HkxFile.h  HkxNodeObject.h  hkxbehavior.h  hkxnode.h
include/scope/: scopeinfo.h
include/template/: processparser.h
include/ui/: AnimProgressBar.h  BehaviorInfo.h  BehaviorListModel.h  BehaviorListView.h
include/update/: dataunification.h  patch.h  updateprocess.h
include/utilities/: OnScopeEnds.h  StringMatchTrie.h  algorithm.h  animationsconvert.h  animquery.h  animtemplate.h  conditiondetails.h  conditioninfo.h  conditions.h  conditionsyntax.h  constants.h  crc32.h  filechecker.h  hkxelementsplit.h  lexersearch.h  line.h  lineprocess.h  linkedvar.h  noncopyable.h  process.h  readtextfile.h  regex.h  scope.h  stringsplit.h  threadpool.h  types.h  writetextfile.h
scripts/: gennerate_src_group.ps1
src/: Global.cpp  LaunchPatcher.cpp  connector.cpp  debuglog.cpp  debugmsg.cpp  externalscript.cpp  main.cpp  nemesisinfo.cpp  xmake.lua
src/Testers/: AnimationDataSingleFileTester.cpp  AnimationSetDataProjectTester.cpp  AnimationSetDataSingleFileTester.cpp  AnimationSetDataStateTester.cpp  HkxBehaviorTester.cpp  HkxNodeTester.cpp  MasterRepositoryTester.cpp  ModifierTester.cpp  NObjectTester.cpp  TemplateTester.cpp
src/animdata/: AnimationDataClipData.cpp  AnimationDataMotionData.cpp  AnimationDataProject.cpp  AnimationDataSingleFile.cpp  MotionDataInfo.cpp  animdatasinglefilebuilder.cpp
src/animsetdata/: AnimationSetDataProject.cpp  AnimationSetDataSingleFile.cpp  AnimationSetDataState.cpp  animsetdata-project.cpp
src/base/: exporter.cpp
src/core/: AnimationRequest.cpp  AnimationRequestRepository.cpp  BreakObject.cpp  CollectionObject.cpp  CompilationManager.cpp  CompileState.cpp  EmptyObject.cpp  ForEachObject.cpp  IfObject.cpp  LineStream.cpp  MasterRepository.cpp  ModClass.cpp  ModObject.cpp  ModRepository.cpp  NLine.cpp  NObject.cpp  NObjectParser.cpp  NObjectRepository.cpp  ParsingForEachScope.cpp  SemanticManager.cpp  SubTemplateObject.cpp  animvarptr.cpp  modinfo.cpp  modinfomanager.cpp  multichoice.cpp  preprocessline.cpp  querymanager.cpp
src/generate/: addanims.cpp  addevents.cpp  alternateanimation.cpp  animationdata.cpp  animationsetdata.cpp  animationutility.cpp  animdatasubprocess.cpp  animsetdatasubprocess.cpp  behaviorcheck.cpp  behaviorgenerator.cpp  behaviorprocess.cpp  behaviorprocess_utility.cpp  behaviorsubprocess.cpp  generator_utility.cpp  installscripts.cpp  papyruscompile.cpp  playerexclusive.cpp
src/hkx/: HkxBehaviorFile.cpp  HkxCharacter.cpp  HkxFile.cpp  hkxbehavior.cpp  hkxnode.cpp
src/template/: processparser.cpp
src/ui/: AnimProgressBar.cpp  BehaviorListModel.cpp  BehaviorListView.cpp  CmdLaunch.cpp  ErrorMsgBox.cpp  MessageHandler.cpp  MultiInstanceCheck.cpp  NemesisEngine.cpp  SettingsSave.cpp
src/update/: dataunification.cpp  functionupdate.cpp  updateprocess.cpp
src/utilities/: algorithm.cpp  animationsconvert.cpp  conditioninfo.cpp  conditions.cpp  conditionsyntax.cpp  crc32.cpp  filechecker.cpp  hkxelementsplit.cpp  line.cpp  lineprocess.cpp  linkedvar.cpp  process.cpp  regex.cpp  renew.cpp  scope.cpp  stringextension.cpp  stringsplit.cpp  template.cpp  templateline.cpp  threadpool.cpp  writetextfile.cpp
(+8562 files in other folders)
